--- a/src/app/event-activity/event-activity.component.html
+++ b/src/app/event-activity/event-activity.component.html
@@ -7,7 +7,7 @@
                     <div class="all_event_sec">
                         <div class="row">
                             <div class="col-3 m-auto pr-0 float-right new_event_menu">
-                                <a href="#"><img src="/assets/images/eventC_icon.png">
+                                <a><img src="/assets/images/eventC_icon.png">
                                     <p class="text-white">New Event</p>
                                 </a>
                             </div>
@@ -17,6 +17,11 @@
                         </div>
                     </div>
                     <div id="overlay1" class="new_event_menu_box" style="display: none;">
+                        <div class="m-auto pr-0 float-left new_event_menu slider_overlay">
+                            <a class="text-white "><img src="/assets/images/overlay.png">
+                                <p>Collections</p>
+                            </a>
+                        </div>
                         <div class="">
                             <div class="event_menu">
                                 <div class="all_menu_content  d-flex flex-wrap align-content-center">
@@ -40,7 +45,7 @@
                         <div class="event_slider1" id="firstSlider">
                             <div class="slide1" *ngFor="let item of myEvent">
                                 <div class="slider_box1 text-center m-2" [hidden]="!item.eventTitle">
-                                    <button class="event_btn"
+                                    <button class="event_btn" title="{{item.eventTitle}}"
                                         (click)="allEventList(item._id)">{{item.eventTitle}}</button>
                                 </div>
                             </div>
@@ -50,7 +55,7 @@
                     <div class="event_activity" *ngIf="selectedActivity">
                         <p>{{selectedActivity.activityName}}<br>{{selectedActivity.activityDate}}</p>
                     </div>
-                    <div class="w-100 mb-3">
+                    <div class="w-100 mb-3 event-activity-class">
                         <div class="event_button" *ngFor="let item of selectedActivityGroup;">
                             <button class="eventC_btn" (click)="handleChange(item)"
                                 *ngIf="item.groupName">{{item.groupName}}</button>
@@ -158,6 +163,31 @@
                                 </div>
                             </div>
                         </div>
+                        <div id="overlay1" class="new_event_menu_box" style="display: none;">
+                                <div class="m-auto pr-0 float-left new_event_menu slider_overlay">
+                                    <a class="text-white "><img src="/assets/images/overlay.png">
+                                        <p>Collections</p>
+                                    </a>
+                                </div>
+                                <div class="">
+                                    <div class="event_menu">
+                                        <div class="all_menu_content  d-flex flex-wrap align-content-center">
+                                            <ul>
+                                                <li><a href="eventA.html" class="text-white new_event">my event</a></li>
+                                                <li><a href="new_event_slider.html" class="text-white my_event">new event</a>
+                                                </li>
+                                                <li><a href="add_bank_account.html" class="text-white my_account">bank
+                                                        account</a>
+                                                </li>
+                                                <li><a href="reset_password.html" class="text-white my_account">Reset
+                                                        Password</a>
+                                                </li>
+                                                <li><a href="#" class="text-white my_account">Logout</a></li>
+                                            </ul>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
                         <div *ngIf="singleEventDetails">
                             <div class="enter_event_title">
                                 <h6 class="text-center text-white">Event Hashtag</h6>
