--- a/src/app/auto-message/auto-message.component.html
+++ b/src/app/auto-message/auto-message.component.html
@@ -6,7 +6,7 @@
                 <div class="all_event_sec">
                     <div class="row">
                         <div class="col-3 m-auto pr-0 float-right new_event_menu">
-                            <a href="#"><img src="/assets/images/eventF_icon.png">
+                            <a><img src="/assets/images/eventF_icon.png">
                                 <p class="text-white">New Event</p>
                             </a>
                         </div>
@@ -15,18 +15,25 @@
                         </div>
                     </div>
                 </div>
-                <div id="overlay1" class="new_event_menu_box" style="display: none;">
+                <div id="overlay" class="new_event_menu_box" style="display: none;">
+                    <div class="m-auto pr-0 float-left new_event_menu slider_overlay">
+                        <a class="text-white "><img src="/assets/images/overlay.png">
+                            <p>New Event</p>
+                        </a>
+                    </div>
                     <div class="">
                         <div class="event_menu">
                             <div class="all_menu_content  d-flex flex-wrap align-content-center">
                                 <ul>
-                                    <li><a href="eventA.html" class="text-white new_event">my event</a></li>
-                                    <li><a href="new_event_slider.html" class="text-white my_event">new event</a></li>
-                                    <li><a href="add_bank_account.html" class="text-white my_account">bank account</a>
+                                    <li><a routerLink="/home" class="text-white new_event">Home</a></li>
+                                    <li><a routerLink="/myEvent" class="text-white new_event">my event</a></li>
+                                    <li><a routerLink="/createEvent" class="text-white my_event">new event</a>
                                     </li>
-                                    <li><a href="reset_password.html" class="text-white my_account">Reset Password</a>
-                                    </li>
-                                    <li><a href="#" class="text-white my_account">Logout</a></li>
+                                    <li><a routerLink="/bankDetails" class="text-white my_account">bank
+                                            account</a></li>
+                                    <li><a routerLink="/reset-password" class="text-white my_account">Reset
+                                            Password</a></li>
+                                    <li><a (click)="logout()" class="text-white my_account">Logout</a></li>
                                 </ul>
                             </div>
                         </div>
@@ -36,7 +43,7 @@
                     <div class="event_slider1" id="firstSlider">
                         <div class="slide1" *ngFor="let item of myEvent">
                             <div class="slider_box1 text-center m-2" [hidden]="!item.eventTitle">
-                                <button class="event_btn" (click)="allEventList(item._id)">{{item.eventTitle}}</button>
+                                <button class="event_btn" title="{{item.eventTitle}}" (click)="allEventList(item._id)">{{item.eventTitle}}</button>
                             </div>
                         </div>
                     </div>
@@ -50,29 +57,15 @@
                 </div> -->
 
                 <div class="eventF_pera">
-                    <p>Together with our families, Thank you for your presence, Purchase, Presents, and Prayers.</p>
+                    <textarea class="form-control" rows="3"  formControlName="message"
+                               placeholder="Enter Thank you message" style="resize: none;"></textarea>
                 </div>
 
-                <div class="eventE_btn text-center text-white">
-                    <button class="eventF_save">Save</button>
-                </div>
 
                 <div class="eventF_send ">
                     <label class="text-white mr-1">Send on</label>
-                    <input type="text" name="day" placeholder="Day">
-                    <input type="text" name="Month" placeholder="month">
-                    <input type="text" name="Year" placeholder="year">
+                    <input autocomplete="off" type="text" id="afterEventDate" name="selectDate" placeholder="dd/mm" class="form-control">
                 </div>
-
-                <div class="eventF_at">
-                    <label class="text-white mr-1">at</label>
-                    <input type="text" name="time">
-                    <input type="text" name="time">
-                    <span class="text-white"> : </span>
-                    <input type="text" name="time">
-                    <input type="text" name="time">
-                </div>
-
                 <div class="eventF_to">
                     <label class="text-white">to</label>
                     <input type="radio" name="gender_to" id="all1" class="gendar_radio" checked>
@@ -88,6 +81,11 @@
                         <label for="all3" class="text-white">all invited guests</label>
                     </div>
 
+                </div>
+
+
+                <div class="eventE_btn text-center text-white">
+                    <button class="event_invitation">Save</button>
                 </div>
 
                 <div class="collect_detail text-center">
