--- a/src/app/collections/collections.component.html
+++ b/src/app/collections/collections.component.html
@@ -27,30 +27,7 @@
 
 <section class="collection_slider_section d-flex flex-wrap align-content-center">
     <div class="container-fluid">
-            <div id="overlay" class="new_event_menu_box" style="display: none;">
-                    <div class="m-auto pr-0 float-left new_event_menu slider_overlay">
-                        <a class="text-white "><img src="/assets/images/overlay.png">
-                            <p>Collections</p>
-                        </a>
-                    </div>
-                    <div class="">
-                        <div class="event_menu">
-                            <div class="all_menu_content  d-flex flex-wrap align-content-center">
-                                <ul>
-                                    <li><a routerLink="/home" class="text-white new_event">Home</a></li>
-                                    <li><a routerLink="/myEvent" class="text-white new_event">my event</a></li>
-                                    <li><a routerLink="/createEvent" class="text-white my_event">new event</a>
-                                    </li>
-                                    <li><a routerLink="/bankDetails" class="text-white my_account">bank
-                                            account</a></li>
-                                    <li><a routerLink="/reset-password" class="text-white my_account">Reset
-                                            Password</a></li>
-                                    <li><a (click)="logout()" class="text-white my_account">Logout</a></li>
-                                </ul>
-                            </div>
-                        </div>
-                    </div>
-                </div>
+
         <h3 class="text-center">Aso Ebi</h3>
         <!-- collection slider starts -->
         <div class="collection_slider">
@@ -68,16 +45,44 @@
                                 <div class="col-9 p-0">
                                     <span class="text-white"> Hello{{userName}} </span>
                                 </div>
+
                             </div>
                         </div>
+                        <div id="overlay" class="new_event_menu_box" style="display: none;">
+                                <div class="m-auto pr-0 float-left new_event_menu slider_overlay">
+                                    <a class="text-white "><img src="/assets/images/overlay.png">
+                                        <p>Collections</p>
+                                    </a>
+                                </div>
+                                <div class="">
+                                    <div class="event_menu">
+                                        <div class="all_menu_content  d-flex flex-wrap align-content-center">
+                                            <ul>
+                                                <li><a routerLink="/home" class="text-white new_event">Home</a></li>
+                                                <li><a routerLink="/myEvent" class="text-white new_event">my event</a></li>
+                                                <li><a routerLink="/createEvent" class="text-white my_event">new event</a>
+                                                </li>
+                                                <li><a routerLink="/bankDetails" class="text-white my_account">bank
+                                                        account</a></li>
+                                                <li><a routerLink="/reset-password" class="text-white my_account">Reset
+                                                        Password</a></li>
+                                                <li><a (click)="logout()" class="text-white my_account">Logout</a></li>
+                                            </ul>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
                         <div class="inner_content_btn text-center" *ngIf="totalCollection">
-                            <a href="#" class="tom_btn text-white text-center">{{totalCollection.eventHashTag}}</a>
+                            <a href="#" title="{{totalCollection.eventHashTag}}"
+                                class="tom_btn text-white text-center">{{totalCollection.eventHashTag}}</a>
                         </div>
                         <div class="inner_content_btn total_btn">
-                            <a (click)="totalCost('slide_four','slide_one')" class="text-white float-left text-center">Total</a>
-                            <a  class="text-white float-right text-center">GuestList</a>
+                            <a (click)="totalCost('slide_four','slide_one')"
+                                class="text-white float-left text-center">Total</a>
+                            <a class="text-white float-right text-center">GuestList</a>
                         </div>
-                        <h3 class="number text-white text-center"><img src="/assets/images/N.png">{{maleTotal+femaleTotal}}</h3>
+                        <h3 class="number text-white text-center"><img
+                                src="/assets/images/N.png">{{maleTotal+femaleTotal}}</h3>
                         <div class="inner_box_content">
                             <div class="inner_title">
                                 <h3 class="text-white">{{money._id}} ( <img src="/assets/images/N.png"> Total)</h3>
@@ -131,14 +136,41 @@
                                 </div>
                             </div>
                         </div>
+                        <div id="overlay" class="new_event_menu_box" style="display: none;">
+                            <div class="m-auto pr-0 float-left new_event_menu slider_overlay">
+                                <a class="text-white "><img src="/assets/images/overlay.png">
+                                    <p>Collections</p>
+                                </a>
+                            </div>
+                            <div class="">
+                                <div class="event_menu">
+                                    <div class="all_menu_content  d-flex flex-wrap align-content-center">
+                                        <ul>
+                                            <li><a routerLink="/home" class="text-white new_event">Home</a></li>
+                                            <li><a routerLink="/myEvent" class="text-white new_event">my event</a></li>
+                                            <li><a routerLink="/createEvent" class="text-white my_event">new event</a>
+                                            </li>
+                                            <li><a routerLink="/bankDetails" class="text-white my_account">bank
+                                                    account</a></li>
+                                            <li><a routerLink="/reset-password" class="text-white my_account">Reset
+                                                    Password</a></li>
+                                            <li><a (click)="logout()" class="text-white my_account">Logout</a></li>
+                                        </ul>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+
                         <div class="inner_content_btn text-center" *ngIf="totalCollection">
-                            <a  class="tom_btn text-white text-center">{{totalCollection.eventHashTag}}</a>
+                            <a title="{{totalCollection.eventHashTag}}"
+                                class="tom_btn text-white text-center">{{totalCollection.eventHashTag}}</a>
                         </div>
                         <div class="inner_content_btn total_btn">
                             <a (click)="totalCost('slide_four')" class="text-white float-left text-center">Total</a>
-                            <a  class="text-white float-right text-center">GuestList</a>
+                            <a class="text-white float-right text-center">GuestList</a>
                         </div>
-                        <h3 class="number text-white text-center" *ngIf="totalCollection"><img src="/assets/images/N.png">{{totalCollection.finalTotal}}</h3>
+                        <h3 class="number text-white text-center" *ngIf="totalCollection"><img
+                                src="/assets/images/N.png">{{totalCollection.finalTotal}}</h3>
                         <div class="inner_box_content" *ngIf="totalCollection">
                             <div class="gender_list text-white">
                                 <div class="row">
@@ -180,26 +212,51 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="inner_content_btn text-center" *ngIf="totalCollection">
-                            <a href="#" class="tom_btn text-white text-center">{{totalCollection.eventHashTag}}</a>
-                        </div>
-                        <div class="inner_content_btn total_btn">
-                            <a (click)="totalCost('slide_four')" class="text-white float-left text-center">Total</a>
-                            <a  class="text-white float-right text-center">GuestList</a>
-                        </div>
-                        <h3 class="number text-white text-center"><a href="#"><img
-                                    src="/assets/images/search.png"></a><a href="#"><img
-                                    src="/assets/images/download.png"></a> Share point. 412</h3>
-                        <div class="inner_box_content">
-                            <div class="scrollbar-rail scroll_content">
-                                <div class="five_border">
-                                    <div class="inner_title">
-                                        <h3 class="text-white"><span>TA</span> Tolani Aso Ebi</h3>
-                                    </div>
-                                    <div class="gender_list text-white" *ngFor="let list of allGuestList">
-                                        <div class="list1">
-                                            <p>{{list.firstName}} {{list.lastName}} <img src="/assets/images/N.png">{{list.totalCollection}}</p>
+                        <div id="overlay" class="new_event_menu_box" style="display: none;">
+                                <div class="m-auto pr-0 float-left new_event_menu slider_overlay">
+                                    <a class="text-white "><img src="/assets/images/overlay.png">
+                                        <p>Collections</p>
+                                    </a>
+                                </div>
+                                <div class="">
+                                    <div class="event_menu">
+                                        <div class="all_menu_content  d-flex flex-wrap align-content-center">
+                                            <ul>
+                                                <li><a routerLink="/home" class="text-white new_event">Home</a></li>
+                                                <li><a routerLink="/myEvent" class="text-white new_event">my event</a></li>
+                                                <li><a routerLink="/createEvent" class="text-white my_event">new event</a>
+                                                </li>
+                                                <li><a routerLink="/bankDetails" class="text-white my_account">bank
+                                                        account</a></li>
+                                                <li><a routerLink="/reset-password" class="text-white my_account">Reset
+                                                        Password</a></li>
+                                                <li><a (click)="logout()" class="text-white my_account">Logout</a></li>
+                                            </ul>
                                         </div>
+                                    </div>
+                                </div>
+                            </div>
+                    </div>
+                    <div class="inner_content_btn text-center" *ngIf="totalCollection">
+                        <a href="#" title="{{totalCollection.eventHashTag}}"
+                            class="tom_btn text-white text-center">{{totalCollection.eventHashTag}}</a>
+                    </div>
+                    <div class="inner_content_btn total_btn">
+                        <a (click)="totalCost('slide_four')" class="text-white float-left text-center">Total</a>
+                        <a class="text-white float-right text-center">GuestList</a>
+                    </div>
+                    <h3 class="number text-white text-center"><a href="#"><img src="/assets/images/search.png"></a><a
+                            href="#"><img src="/assets/images/download.png"></a> Share point. 412</h3>
+                    <div class="inner_box_content">
+                        <div class="scrollbar-rail scroll_content">
+                            <div class="five_border">
+                                <div class="inner_title">
+                                    <h3 class="text-white"><span>TA</span> Tolani Aso Ebi</h3>
+                                </div>
+                                <div class="gender_list text-white" *ngFor="let list of allGuestList">
+                                    <div class="list1">
+                                        <p>{{list.firstName}} {{list.lastName}} <img
+                                                src="/assets/images/N.png">{{list.totalCollection}}</p>
                                     </div>
                                 </div>
                             </div>
@@ -207,34 +264,9 @@
                     </div>
                 </div>
             </div>
-            <!-- 5th slide end -->
         </div>
-        <!-- collection slider ends -->
-
-<div id="overlay" class="new_event_menu_box" style="display: none;">
-        <!-- <div class="m-auto pr-0 float-left new_event_menu slider_overlay">
-            <a class="text-white "><img src="/assets/images/overlay.png">
-                <p>Collections</p>
-            </a>
-        </div> -->
-        <div class="">
-            <div class="event_menu">
-                <div class="all_menu_content  d-flex flex-wrap align-content-center">
-                    <ul>
-                        <li><a routerLink="/home" class="text-white new_event">Home</a></li>
-                        <li><a routerLink="/myEvent" class="text-white new_event">my event</a></li>
-                        <li><a routerLink="/createEvent" class="text-white my_event">new event</a>
-                        </li>
-                        <li><a routerLink="/bankDetails" class="text-white my_account">bank
-                                account</a></li>
-                        <li><a routerLink="/reset-password" class="text-white my_account">Reset
-                                Password</a></li>
-                        <li><a (click)="logout()" class="text-white my_account">Logout</a></li>
-                    </ul>
-                </div>
-            </div>
-        </div>
+        <!-- 5th slide end -->
     </div>
-    </div>
+    <!-- collection slider ends -->
 
-</section>
+    
