--- a/src/app/invitation-event/invitation-event.component.html
+++ b/src/app/invitation-event/invitation-event.component.html
@@ -6,15 +6,22 @@
             <div class="Join_inner_content_box">
                 <div class="all_event_sec">
                     <div class="row">
-                        <div class="col-3 m-auto pr-0 float-right new_event_menu">
-                            <a href="#"><img src="/assets/images/eventE_icon.png"></a>
-                        </div>
+                            <div class="col-3 m-auto pr-0 float-right new_event_menu">
+                                    <a><img src="/assets/images/eventE_icon.png">
+                                        <p class="text-white">My Event</p>
+                                    </a>
+                                </div>
                         <div class="col-9 p-0">
                             <span class="text-black all_event_name"> Hello Rao Info Tech </span>
                         </div>
                     </div>
                 </div>
                 <div id="overlay1" class="new_event_menu_box" style="display: none;">
+                        <div class="m-auto pr-0 float-left new_event_menu slider_overlay">
+                                <a class="text-white "><img src="/assets/images/overlay.png">
+                                    <p>My Event</p>
+                                </a>
+                            </div>
                     <div class="">
                         <div class="event_menu">
                             <div class="all_menu_content  d-flex flex-wrap align-content-center">
@@ -35,7 +42,7 @@
                     <div class="event_slider1" id="firstSlider">
                         <div class="slide1" *ngFor="let item of myEvent">
                             <div class="slider_box1 text-center m-2" [hidden]="!item.eventTitle">
-                                <button class="event_btn"
+                                <button class="event_btn" title="{{item.eventTitle}}"
                                     (click)="allEventList(item._id)">{{item.eventTitle}}</button>
                             </div>
                         </div>
@@ -43,17 +50,17 @@
                 </div>
 
                 <div class="eventE_media">
-                      <share-button [theme]="'circles-dark'" [button]="'whatsapp'" [showText]="true"
+                      <share-button [theme]="'circles-dark'" [button]="'whatsapp'"
                         [showCount]="true"
                         [url]="'https://aso-ebi.com/welcome-guest/NWQ1MmMyMTdhNTBjMTUzYmVmNDc2MTIy'"
                         [autoSetMeta]="false"></share-button>
-                    <share-button [theme]="'circles-dark'" [button]="'facebook'" [showText]="true"
+                    <share-button [theme]="'circles-dark'" [button]="'facebook'"
                         [showCount]="true"
                         [url]="'https://aso-ebi.com/welcome-guest/NWQ1MmMyMTdhNTBjMTUzYmVmNDc2MTIy'">
                     </share-button>
-                    <share-button [theme]="'circles-dark'" [button]="'email'" [showText]="true" [showCount]="true"
+                    <share-button [theme]="'circles-dark'" [button]="'email'" [showCount]="true"
                         [url]="'https://twitter.com/'"></share-button>
-                    <share-button [theme]="'circles-dark'" [button]="'sms'" [showText]="true" [showCount]="true"
+                    <share-button [theme]="'circles-dark'" [button]="'sms'" [showCount]="true"
                         [url]="'https://twitter.com/'"></share-button>
 
                 </div>
