--- a/src/app/my-event-details/my-event-details.component.html
+++ b/src/app/my-event-details/my-event-details.component.html
@@ -3,11 +3,37 @@
         <div class="container-fluid">
             <h3 class="text-center">Aso Ebi</h3>
             <div class="eventB_sec1">
+                <div class="overlay-parent-class">
+                        <div id="overlay" class="new_event_menu_box" style="display: none;">
+                                <div class="m-auto pr-0 float-left new_event_menu slider_overlay">
+                                    <a class="text-white "><img src="/assets/images/overlay.png">
+                                        <p>Collections</p>
+                                    </a>
+                                </div>
+                                <div class="">
+                                    <div class="event_menu">
+                                        <div class="all_menu_content  d-flex flex-wrap align-content-center">
+                                            <ul>
+                                                <li><a routerLink="/home" class="text-white new_event">Home</a></li>
+                                                <li><a routerLink="/myEvent" class="text-white new_event">my event</a></li>
+                                                <li><a routerLink="/createEvent" class="text-white my_event">new event</a>
+                                                </li>
+                                                <li><a routerLink="/bankDetails" class="text-white my_account">bank
+                                                        account</a></li>
+                                                <li><a routerLink="/reset-password" class="text-white my_account">Reset
+                                                        Password</a></li>
+                                                <li><a (click)="logout()" class="text-white my_account">Logout</a></li>
+                                            </ul>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        
                 <div class="Join_inner_content_box">
                     <div class="all_event_sec">
                         <div class="row">
                             <div class="col-3 m-auto pr-0 float-right new_event_menu">
-                                <a href="#"><img src="/assets/images/eventB_icon.png">
+                                <a><img src="/assets/images/eventB_icon.png">
                                     <p class="text-white">New Event</p>
                                 </a>
                             </div>
@@ -16,32 +42,12 @@
                             </div>
                         </div>
                     </div>
-                    <div id="overlay" class="new_event_menu_box" style="display: none;">
-                        <div class="">
-                            <div class="event_menu">
-                                <div class="all_menu_content  d-flex flex-wrap align-content-center">
-                                    <ul>
-                                        <li><a href="eventA.html" class="text-white new_event">my event</a></li>
-                                        <li><a href="new_event_slider.html" class="text-white my_event">new event</a>
-                                        </li>
-                                        <li><a href="add_bank_account.html" class="text-white my_account">bank
-                                                account</a>
-                                        </li>
-                                        <li><a href="reset_password.html" class="text-white my_account">Reset
-                                                Password</a>
-                                        </li>
-                                        <li><a href="#" class="text-white my_account">Logout</a></li>
-                                    </ul>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
                     <div class="evet_sliding">
                         <div class="event_slider2">
                             <span *ngFor="let item of myEvent">
                                 <div class="slide1">
                                     <div class="slider_box1 text-center m-2">
-                                        <button class="event_btn"
+                                        <button class="event_btn" title="{{item.eventTitle}}"
                                             (click)="singleEventDeatils(item._id)">{{item.eventTitle}}</button>
                                     </div>
                                 </div>
@@ -108,6 +114,7 @@
                         </div>
                     </div>
                 </div>
+                </div>
             </div>
         </div>
     </section>
@@ -123,7 +130,7 @@
                         <div class="event_inner_content ">
                             <div class="new_event_sec edit_event_new">
                                 <div class="row">
-                                    <div class="col-3 m-auto pr-0 float-right new_event_menu">
+                                    <div class="col-3 m-auto pr-0 float-right new_event_menu slider_overlay ">
                                         <a><img src="/assets/images/edit_event_icon.png">
                                             <p class="text-white">New Event</p>
                                         </a>
@@ -162,3 +169,4 @@
             </div>
         </section>
     </div>
+    
